# DeskHarness

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  PROGRESS.md  README.md  README.zh-CN.md  STRUCTURE.md  pyproject.toml
.github/workflows/: docker-build.yml  docker-publish.yml
app/: README.md  cli.py  factory.py  plugin_scaffold.py  settings.py
app/api/: callbacks.py  debug.py  metrics.py  openharness.py  shells.py
app/middleware/: rate_limit.py
app/schemas/: README.md  brain.py  manifest.py  openharness.py  plugin.py  session.py
app/services/: README.md  brain_factory.py  openharness_invoke.py  runtime.py
cmd/deskharness/: README.md  main.py
configs/: brain.prompt-template.yaml  brain.yaml  config.docker.yaml  config.template.yaml  routes.yaml
core/: README.md  async_tasks.py  brain_client.py  brain_prompt_template.py  dispatcher.py  engine.py  metrics.py  plugin_loader.py  plugin_sandbox.py  plugin_subprocess.py  rate_limit.py  router.py  session_store.py  structured_log.py
core/runtime/: README.md  compaction.py
core/session/: factory.py  protocol.py  redis_store.py
doc/: README.md
doc/adr/: 002-product-line-unification.md  003-tpavr-adoption.md  004-python-runtime.md  README.md
doc/architecture/: README.md  architecture.md
doc/deployment/: README.md  docker.md  github-about.md  release.md
doc/extension/: action-plugin-tpavr-guide.md  extension-points.md  plugin-tpavr-guide.md
doc/roadmap/: phase-plan.md
doc/specs/: desk-envelope.md  openharness-protocol.md  routing-intent.md  session-state.md
examples/minimal/: README.md  (+7 more)
memory/: README.md
plugins/: README.md
schemas/: brain-request.v0.2.json  brain-response.v0.2.json  plugin-command.v0.2.json  plugin-result.v0.2.json
tests/: README.md  conftest.py
(+34 files in other folders)
