[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deskharness"
version = "0.1.0"
description = "Thin Integration Harness Engine for SMEs — OpenHarness protocol, pluggable Shell/Brain/plugins"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "httpx>=0.28",
  "jsonschema>=4.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
]
redis = [
  "redis>=5.0",
]

[project.scripts]
deskharness = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "pkg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
